aplacc/tests/failing/mb-test8b-plain-ctx.tail
let a:[int]0 = firstSh(iotaSh(5)) in
let b:[int]1 = [a] in
i2d(firstSh(b))
